fix team map on tablet

--- a/app/assets/stylesheets/homepage/_team.scss
+++ b/app/assets/stylesheets/homepage/_team.scss
@@ -8,22 +8,7 @@
     background-size: cover;
     padding-bottom: 120px;
   }
-  // &:before {
-  //   @media(min-width: $medium) {
-  //     background: #1B4E99;
-  //     top: -5vw;
-  //     content: '';
-  //     z-index: 2;
-  //     display: block;
-  //     height: 5vw;
-  //     left: 0;
-  //     position: absolute;
-  //     right: 0;
-  //     transform: skewY(-2.5deg);
-  //     transform-origin: 100%;
-  //     z-index: 2;
-  //   }
-  // }
+
   .team-bg {
     background: image-url("map_mobile@2x.png");
     height: 100%;
@@ -34,12 +19,18 @@
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 0;
+
+    @media(min-width: $medium) {
+      background: image-url('map_tablet@2x.png');
+      background-size: 900px;
+      background-repeat: no-repeat;
+      background-position: center 10px;
+      top: 20px;
+    }
+
     @media(min-width: $large) {
-      height: 100%;
-      width: 100%;
       top: 0;
       left: 0;
-      position: absolute;
       padding-top: 150px;
       /* Path: */
       background: image-url("map_desktop.png");
@@ -50,7 +41,7 @@
   }
 
   .team-container {
-    @media(max-width: 767px) {
+    @media(max-width: $medium) {
       position: relative;
       z-index: 2;
     }
@@ -58,24 +49,7 @@
       max-width: 1000px;
     }
   }
-  //
-  // &:before {
-  //   content: '';
-  //   width: 100%;
-  //   height: 100%;
-  //   background: image-url("map_mobile@2x.png");
-  //   background-position: center 150px;
-  //   position: absolute;
-  //   background-size: contain;
-  //   background-repeat: no-repeat;
-  //   z-index: 0;
-  //   top: 0;
-  //
-  //   @media(min-width: $medium) {
-  //     background: image-url("map_desktop@2x.png");
-  //     background-position: center 50px;
-  //   }
-  // }
+
   .team-intro {
     @media(min-width: $medium) {
       width: 80%;
@@ -100,9 +74,11 @@
 
   .employee-grid {
     margin-top: 225px;
+
     @media(min-width: $medium) {
-      margin-top: 180px;
+      margin-top: 255px;
     }
+
     @media(min-width: $large) {
       margin: 450px auto auto;
       width: 90%;
